--- a/estilo.css
+++ b/estilo.css
@@ -201,6 +201,7 @@ header {
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: 550px;
     padding: 80px 50px;
 }
 
@@ -300,7 +301,7 @@ header {
     flex-direction: column;
     align-items: initial;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
     width: 50%;
 }
 
@@ -317,7 +318,7 @@ header {
 }
 
 .texto1 p {
-    font-size: 16px;
+    font-size: 18px;
     text-align: initial;
     line-height: 25px;
     font-weight: 500;
